# evo-featuresel

./: .gitignore  README.md  benchmark_c_vs_py.py  evo_alg_rhi.py  gui_launcher.py  main.py  pyproject.toml  setup.py  shap.ipynb  uml.drawio  verify_parallelism.py
evo/: core.c  core.pyx  individual.py  population.py  runner.py  utils.py
evo/gui/: logger.py  main_window.py  widgets.py  worker.py
legacy/: evo_alg_rhi.py
tests/: test_core.py  test_packed.py
